pootle/static/css/style.css
/* ... */
button.close
{
    padding: 0;
    cursor: pointer;
    background: transparent;
    border: 0;
    -webkit-appearance: none;
}

.fade
{
  opacity: 0;
  transition: opacity 0.15s linear;
}

.fade.in
{
  opacity: 1;
}


.callout
{
    background-color: rgba(255, 255, 224, 0.5);
    padding: 1em;
    box-shadow: 0px 0 10px rgba(0, 0, 0, 0.3);
    border-radius: 3px;
    border: 1px solid rgba(0, 0, 0, 0.3);
}


/*
 * PAGE BODY
 */

#body
{
    margin: 0;
    padding: 0 0 4em;
    position: relative;
    width: 100%;
    overflow: hidden;
    /* height calculated via js */
}

/* TABLES */

.module table,
.module-primary table
{
    width: 100%;
}

td.language,
td.code,
td.profile,
td.username
{
    padding-left: 5px;
}

html[dir="rtl"] td.language,
html[dir="rtl"] td.code,
html[dir="rtl"] td.profile,
html[dir="rtl"] td.username
{
    padding-left: 0;
    padding-right: 5px;
}

/* table row colors, see 'Table Row Colors.psd' */

tr.view-row:nth-child(odd),
tr.item:nth-child(odd)
{
    background: #f5fbfd;
}

/* MODULES */

.clear
{
    clear: both;
}

.module
{
    width: 48%;
    float: right;
    margin: 0;
}

html[dir="rtl"] .module
{
    float: left;
}

.module.first
{
    float: left;
}

html[dir="rtl"] .module.first
{
    float: right;
}

.hd h2
{
    margin: 1em 0.5em 0;
    border-bottom: 1px solid #eee;
}

html[dir="rtl"] .hd h2
{
    margin-left: 0;
    margin-right: 0.5em;
}

#main-overview .last-action .action-text,
table.stats .last-updated .action-text
{
    display: none;
}


/* When browser size is 1440px or less, show the smaller version of the last action message */
@media screen and (max-width: 1440px)
{
    .last-action .action-text
    {
        display: none;
    }
    table.last .last-updated .action-text
    {
        display: none;
    }
}

html[dir="rtl"] .last-action
{
    margin-left: 0;
    margin-right: 1em;
}

.last-action img
{
    vertical-align: text-bottom;
    width: 20px;
    height: 20px;
}

.last-action .extra-item-meta
{
    color: #999;
}

.hd h3
{
    border-bottom: 1px solid #eee;
    margin: 1em 0 0;
}

html[dir="rtl"] .hd h3 span
{
    padding-right: 0;
    padding-left: 5px;
}

.bd
{
    margin: 1em;
}

.nomargin
{
    margin: 0;
}

.bd h2,
{
    margin-bottom: 0.5em;
}

.bd h3
{
    font-size: 120%;
}

.bd h4
{
    margin-top: 0.5em;
    font-size: 110%;
    font-weight: bold;    
}

/* USER PROFILES */

#user-profile
{
    float: none;
    width: 100%;
}

#user-contributions-wrapper
{
    margin-right: 220px;
}

html[dir="rtl"] #user-contributions-wrapper
{
    margin-right: auto;
    margin-left: 220px;
}

#user-contributions
{
    float: left;
    width: 100%;
}

html[dir="rtl"] #user-contributions
{
    float: right;
}

#user-contributions table
{
    margin-top: 0.5em;
    margin-bottom: 1.5em;
}

#user-contributions table td
{
    padding: 5px;
    width: 16.6%;
}

#user-meta-wrapper
{
    float: right;
    width: 200px;
}

html[dir="rtl"] #user-meta-wrapper
{
    float: left;
}

#user-meta
{
    margin: 0 20px;
}

#user-meta img
{
    border: 1px solid #eee;
    padding: 5px;
}

#user-meta .user-name
{
    font-size: 140%;
    line-height: 2;
}


/* UPLOAD FORM / UPDATE FROM VCS */

div#upload p,
div#upload ul,
div#update p
{
    margin-bottom: 0.5em;
}


/*
 * BUTTONS
 */

.btn,
a.btn,
input[type="submit"]
{
    border: 0;
    outline: 0;
    cursor: pointer;
    display: inline-block;
    padding: 4px 10px;
    text-align: center;

    min-height: 16px;
    min-width: 110px;
    border-radius: 5px;
    box-shadow: 0px 0px 2px #000;

    background: linear-gradient(to bottom,  #fff,  #ccc);
    color: #130f30;
}

.btn:hover,
input[type="submit"]:hover
{
    text-decoration: none;
    background: linear-gradient(to bottom,  #fff,  #ddd);
}

.btn:active,
input[type="submit"]:active
{
    background: linear-gradient(to bottom,  #ccc,  #fff);
}


/*
 * FORMS
 */

.form
{
    width: 30em;
    margin: 2em auto;
    padding: 1em;
    text-align: left;
    border-radius: 10px;
    box-shadow: 0px 2px 5px #777;

    background: #eee;
}

html[dir="rtl"] .form
{
    text-align: right;
}

.form h2
{
    color: #666;
    margin-bottom: 0.5em;
}

.form p,
.form div.p
{
    margin-top: 1em;
}

.form input[type="text"],
.form input[type="password"],
.form select,
.form textarea
{
    width: 100%;
}

.form .buttons
{
    margin-top: 2em;
    margin-bottom: 0;
    text-align: right;
}

html[dir="rtl"] .form .buttons
{
    text-align: left;
}

.disabled,
input[type="submit"][disabled],
input[type="submit"][disabled]:hover
{
    box-shadow: none;

    background-image: none;
    background-color: #eee;

    border: 1px solid #d9d9d9;

    opacity: 0.65;
}

input.delete[type="submit"]
{
    background: linear-gradient(to bottom,  #fee,  #fcc);
}

body.zoom-out-1 input[type="submit"]
{
    min-width: 100px;
}

body.zoom-out-2 input[type="submit"]
{
    min-width: 90px;
}

.formlink
{
    margin: 0 auto 1em;
    font-size: 137%;
    text-align: center;
}

.form-horizontal.form-actions input
{
    display: inline-block;
    margin-right: 1em;
}

html[dir="rtl"] .form-horizontal.form-actions input
{
    margin-right: inherit;
    margin-left: 1em;
}

/* Form messages */

.form.message
{
    background: linear-gradient(to bottom,  #e5f3f8,  #cde7f1);
}

.form.success
{
    background: linear-gradient(to bottom,  #efd,  #cf9);
}

.form.error
{
    background: linear-gradient(to bottom,  #fee,  #fcc);
}

.form p.info
{
    margin: 0.3em 0;
}

.form .success
{
    color: #390;
}

.form .error
{
    color: #c33;
}

p.help,
span.help_text
{
    font-size: 85%;
    font-style: italic;
}

/* FORM ERROR LISTS */

ul.errorlist
{
    margin: 0;
    padding: 0;
}

.errorlist li
{
    color: #c33;
    margin-top: 0.2em;
}



/*
 * NEWS FORM
 */

.news-feed,
.news-feed-with-form
{
    margin-top: 2em;
}

.news-feed-with-form
{
    margin-left: 38em;
}

.news
{
    margin: 2em 0;
    float: left;
}
/* ... */

